plugins {
    id 'java'
    id 'checkstyle'
    id 'com.github.johnrengelman.shadow' version '7.1.2'
    id 'application'
    id 'jacoco'
}

mainClassName = 'seedu.address.Main'

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

repositories {
    mavenCentral()
    maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
}

checkstyle {
    toolVersion = '11.0.0'
}

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport

    jvmArgs += [
        '--add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED',
        '--add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED',
        '--add-opens=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED',
        '--add-opens=javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED',
        '--add-opens=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED',
        '--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED',
        '--add-opens=javafx.graphics/javafx.stage=ALL-UNNAMED',
        '--add-opens=javafx.controls/javafx.scene.control=ALL-UNNAMED',
        '--add-opens=javafx.fxml/javafx.fxml=ALL-UNNAMED',
        '--add-opens=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED',
        '--add-opens=javafx.graphics/com.sun.javafx.css=ALL-UNNAMED',
        '--add-opens=javafx.base/com.sun.javafx.collections=ALL-UNNAMED',
        '--add-opens=javafx.base/com.sun.javafx.event=ALL-UNNAMED'
    ]

    systemProperty 'testfx.headless', 'true'
    systemProperty 'java.awt.headless', 'true'
    systemProperty 'glass.platform', 'Monocle'
    systemProperty 'monocle.platform', 'Headless'
    systemProperty 'prism.order', 'sw'
    systemProperty 'quantum.multithreaded', 'false'
}

task coverage(type: JacocoReport) {
    dependsOn test
    sourceDirectories.from files(sourceSets.main.allSource.srcDirs)
    classDirectories.from files(sourceSets.main.output)
    executionData.from files(jacocoTestReport.executionData)
    afterEvaluate {
        classDirectories.from files(classDirectories.files.collect {
            fileTree(dir: it, exclude: ['**/*.jar'])
        })
    }
    reports {
        html.required = true
        xml.required = true
    }
}

dependencies {
    String jUnitVersion = '5.4.0'
    String javaFxVersion = '17.0.7'

    implementation group: 'org.openjfx', name: 'javafx-base', version: javaFxVersion, classifier: 'win'
    implementation group: 'org.openjfx', name: 'javafx-base', version: javaFxVersion, classifier: 'mac'
    implementation group: 'org.openjfx', name: 'javafx-base', version: javaFxVersion, classifier: 'linux'
    implementation group: 'org.openjfx', name: 'javafx-controls', version: javaFxVersion, classifier: 'win'
    implementation group: 'org.openjfx', name: 'javafx-controls', version: javaFxVersion, classifier: 'mac'
    implementation group: 'org.openjfx', name: 'javafx-controls', version: javaFxVersion, classifier: 'linux'
    implementation group: 'org.openjfx', name: 'javafx-fxml', version: javaFxVersion, classifier: 'win'
    implementation group: 'org.openjfx', name: 'javafx-fxml', version: javaFxVersion, classifier: 'mac'
    implementation group: 'org.openjfx', name: 'javafx-fxml', version: javaFxVersion, classifier: 'linux'
    implementation group: 'org.openjfx', name: 'javafx-graphics', version: javaFxVersion, classifier: 'win'
    implementation group: 'org.openjfx', name: 'javafx-graphics', version: javaFxVersion, classifier: 'mac'
    implementation group: 'org.openjfx', name: 'javafx-graphics', version: javaFxVersion, classifier: 'linux'
    implementation group: 'org.openjfx', name: 'javafx-swing', version: javaFxVersion, classifier: 'win'
    implementation group: 'org.openjfx', name: 'javafx-swing', version: javaFxVersion, classifier: 'mac'
    implementation group: 'org.openjfx', name: 'javafx-swing', version: javaFxVersion, classifier: 'linux'

    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.7.0'
    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.7.4'

    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: jUnitVersion
    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: jUnitVersion
    testRuntimeOnly "org.testfx:openjfx-monocle:17.0.10"
}

shadowJar {
    archiveFileName = 'playbook.jar'
}

defaultTasks 'clean', 'test'
